--- a/html/reporte-general.html
+++ b/html/reporte-general.html
@@ -30,13 +30,13 @@
     <h1>Reportes</h1>
     <section id="duenno-reporte-general-entrada-datos">
         <div id="tipo-de-relatorio" class="style-flex-row">
-            <a href="/html/reporte-general.html">
+            <a href="reporte-general.html">
                 <h2 class="font-weight-600-border-bold">General</h2>
             </a>
-            <a href="/html/reporte-ganancia.html">
+            <a href="reporte-ganancia.html">
                 <h2 class="font-weight-500-border-regular">Ganancia</h2>
             </a>
-            <a href="/html/reporte-mas-vendidos.html">
+            <a href="reporte-mas-vendidos.html">
                 <h2 class="font-weight-500-border-regular">Más vendidos</h2>
             </a>
         </div>
@@ -44,39 +44,19 @@
 
         <div id="reporte-restaurante-y-fecha-form">
             <form action="" class="style-flex-column">
-                <label for="duenno-lista-restaurantes">Seleccione el restaurante:</label>
+                <label for="duenno-lista-restaurantes"></label>
                 <br />
                 <select name="duenno-lista-restaurantes-name" id="duenno-lista-restaurantes">
-                <option value="restaurantePlaceholder">Seleccione una opción</option>
+                <option value="restaurantePlaceholder">Seleccione el restaurante:</option>
                 <option value="Restaurante-1">Restaurante 1</option>
                 <option value="Restaurante-2">Restaurante 2</option>
                 <option value="Restaurante-3">Restaurante 3</option>
                 </select>
             </form>
             <form action="" class="style-flex-column">
-                <label for="duenno-fecha-reporte-general">Seleccione la fecha</label>
+                <label for="duenno-fecha-reporte-general"></label>
                 <br />
-                <input type="date" name="duenno-fecha-reporte-general" id="duenno-fecha-reporte-general">
-            </form>
-            <form action="" class="style-flex-column" id="reporte-form-atajos">
-                <label>Atajos</label>
-                <!-- <input type="range" name="" id="" min="1" max="30">-->
-                <span>
-                        <input type="radio" name="duenno-atajos-reporte-general" id="atajo-hoy">
-                        <label for="atajo-hoy">Hoy.</label>
-                    </span>
-                <span>
-                        <input type="radio" name="duenno-atajos-reporte-general" id="atajo-ayer">
-                        <label for="atajo-ayer">Ayer.</label>
-                    </span>
-                <span>
-                        <input type="radio" name="duenno-atajos-reporte-general" id="atajo-siete-dias">
-                        <label for="atajo-siete-dias">7 días.</label>
-                    </span>
-                <span>
-                        <input type="radio" name="duenno-atajos-reporte-general" id="atajo-treinta-dias">
-                        <label for="atajo-treinta-dias">30 días.</label>
-                    </span>
+                <input type="text" id="duenno-fecha-reporte-general" name="duenno-fecha-reporte-general" placeholder="Seleccione una fecha:" onfocus="(this.type='date')" onblur="(this.type='text')">
             </form>
             <button type="submit" id="button-reporte-submit">Enviar</button>
 
@@ -120,7 +100,7 @@
                     <a href="#"><i class="icon ion-social-facebook"><img class="facebook" img src="../media/imagenes/icon ion-social-facebook.png" alt="Facebook" width="100" height="100"></i></a>
                 </div>
                 <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#">Home</a></li>
+                    <li class="list-inline-item"><a href="/index.html">Home</a></li>
                     <li class="list-inline-item"><a href="#">Restaurantes</a></li>
                     <li class="list-inline-item"><a href="#">Acerca de</a></li>
                     <li class="list-inline-item"><a href="#">Soporte</a></li>
@@ -130,8 +110,8 @@
                 </div>
                 <p class="copyright">SoftMountain Technology © 2021</p>
     </footer>
-    <script type="text/javascript" src="../js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="../js/reportes.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
