--- a/html/registro-comprador.html
+++ b/html/registro-comprador.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/registro-comprador.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
+    <link rel="stylesheet" href="/css/header-footer.css">
 
 </head>
 
@@ -77,32 +78,27 @@
 
     </main>
 
+
     <footer>
         <section id="footer">
-            <div class="footer-area"></div>
-            <img class="foto2" img src="FoodCourt-logo.jpeg" alt="Food Court" width="500" height="333">
-            <p class="copyright"></p>
-            <div class="vertical-center"> </div>
-
+            <img class="foto2" img src="../media/imagenes/FoodCourt-logo.jpeg" alt="Food Court">
             <div class="footer-basic">
-                <footer>
-                    <div class="social"><a href="#"><i class="icon ion-social-instagram"><img class="instagram" img src="icon ion-social-instagram.png" alt="Instagram" width="100" height="100"></i></a><a href="#"><i class="icon ion-social-twiter"><img class="Twiter" img src="icon ion-social-twiter.png" alt="Twiter" width="100" height="100"></i></a>
-                        <a href="#"><i class="icon ion-social-tiktok"><img class="tiktok" img src="icon ion-social-tiktok.png" alt="Tiktok" width="100" height="100"></i></i></a>
-                        <a href="#"><i class="icon ion-social-facebook"><img class="facebook" img src="icon ion-social-facebook.png" alt="Facebook" width="100" height="100"></i></a>
-                    </div>
-                    <ul class="list-inline">
-                        <li class="list-inline-item"><a href="/index.html">Home</a></li>
-                        <li class="list-inline-item"><a href="#">Restaurantes</a></li>
-                        <li class="list-inline-item"><a href="#">Acerca de</a></li>
-                        <li class="list-inline-item"><a href="#">Soporte</a></li>
-                    </ul>
-                    <div class="footer-line">
-                        <div class="vertical-center"></div>
-                    </div>
-                    <p class="copyright">SoftMountain Technology © 2021</p>
-                </footer>
+                <div class="social">
+                    <a href="#"><i class="icon ion-social-instagram"><img class="instagram" img src="../media/imagenes/icon ion-social-instagram.png" alt="Instagram" width="100" height="100"></i></a>
+                    <a href="#"><i class="icon ion-social-twiter"><img class="Twiter" img src="../media/imagenes/icon ion-social-twiter.png" alt="Twiter" width="100" height="100"></i></a>
+                    <a href="#"><i class="icon ion-social-tiktok"><img class="tiktok" img src="../media/imagenes/icon ion-social-tiktok.png" alt="Tiktok" width="100" height="100"></i></a>
+                    <a href="#"><i class="icon ion-social-facebook"><img class="facebook" img src="../media/imagenes/icon ion-social-facebook.png" alt="Facebook" width="100" height="100"></i></a>
+                </div>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="/index.html">Home</a></li>
+                    <li class="list-inline-item"><a href="/html/restaurantes-provincias.html">Restaurantes</a></li>
+                    <li class="list-inline-item"><a href="/html/acerca-de.html">Acerca de</a></li>
+                    <li class="list-inline-item"><a href="/html/soporte.html">Soporte</a></li>
+                </ul>
+                <div class="footer-line"></div>
+                <p class="copyright">SoftMountain Technology © 2021</p>
             </div>
-
+        </section>
     </footer>
     <!--<script src="js/usuarios-servicio.js" type="text/javascript" ></script>-->
     <script src="js/registro-comprador.js" type="text/javascript"></script>
