--- a/html/reporte-ganancia.html
+++ b/html/reporte-ganancia.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/reportes.css">
-    <link rel="stylesheet" href="../css/header-footer.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/reportes.css">
+    <link rel="stylesheet" href="/css/header-footer.css">
 
 
     <title>Reporte ganacia</title>
@@ -83,13 +83,10 @@
             </tr>
         </table>
     </section>
+
     <footer>
         <section id="footer">
-            <div class="footer-area"></div>
-            <img class="foto2" img src="../media/imagenes/FoodCourt-logo.jpeg" alt="Food Court" width="500" height="333">
-            <p class="copyright"></p>
-            <div class="vertical-center"> </div>
-
+            <img class="foto2" img src="../media/imagenes/FoodCourt-logo.jpeg" alt="Food Court">
             <div class="footer-basic">
                 <div class="social">
                     <a href="#"><i class="icon ion-social-instagram"><img class="instagram" img src="../media/imagenes/icon ion-social-instagram.png" alt="Instagram" width="100" height="100"></i></a>
@@ -99,14 +96,14 @@
                 </div>
                 <ul class="list-inline">
                     <li class="list-inline-item"><a href="/index.html">Home</a></li>
-                    <li class="list-inline-item"><a href="#">Restaurantes</a></li>
-                    <li class="list-inline-item"><a href="#">Acerca de</a></li>
-                    <li class="list-inline-item"><a href="#">Soporte</a></li>
+                    <li class="list-inline-item"><a href="/html/restaurantes-provincias.html">Restaurantes</a></li>
+                    <li class="list-inline-item"><a href="/html/acerca-de.html">Acerca de</a></li>
+                    <li class="list-inline-item"><a href="/html/soporte.html">Soporte</a></li>
                 </ul>
-                <div class="footer-line">
-                    <div class="vertical-center"></div>
-                </div>
+                <div class="footer-line"></div>
                 <p class="copyright">SoftMountain Technology © 2021</p>
+            </div>
+        </section>
     </footer>
     <script type="text/javascript" src="/js/reportes.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
