Header página de pago

--- a/html/proceso-pago.html
+++ b/html/proceso-pago.html
@@ -14,13 +14,25 @@
 </head>
 
 <body>
+    <header id="header-principal">
+        <section class="superior">
+            <nav class="paginas">
+                <a href="#">Restaurantes</a>
+                <a href="#">Acerca de</a>
+                <a href="#">Soporte</a>
+            </nav>
+            <div class="botones">
+                <button id="button1">Usuario</button>
+                <button id="button2">Cerrar sesión</button>
+            </div class="botones">
+    </header>
     <h1>Mi carrito</h1>
     <section id="listado-de-platos-a-pagar">
         <div id="container-lista">
             <div hidden>FUNÇÃO PARA MOSTRAR DADOS DO ARRAY "PLATOS A COMPRAR"</div>
             <div class="carrito-resumen-producto">
                 <div class="container-grid">
-                    <p class="foto-platillo"><img alt="Imagen del platillo"></p>
+                    <p class="foto-platillo"><img alt=""></p>
                     <p class="nombre-platillo">Lorem</p>
                     <button class="btn-bajar-cantidad-producto">-</button>
                     <p class="cantidad-actual-producto">1</p>
@@ -42,7 +54,7 @@
     <div id="container-button-pagar">
         <button type="submit" id="btn-pagar-cuenta">Pagar</button>
         <br>
-        <a href="index.html">Seguir comprando</a>
+        <a href="/index.html">Seguir comprando</a>
     </div>
 
     <footer>
