--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
         <br />
         <a href="html/listado-platillos-menu.html">Listado de platillos de menu.</a>
         <br />
-        <a href="html/proceso-pago.html">Processo de pago</a>
     </h1>
 
     <footer>
         <section id="footer">
-            <img class="foto2" img src="../media/imagenes/FoodCourt-logo.jpeg" alt="Food Court">
+            <div class="footer-area"></div>
+            <img class="foto2" img src="../media/imagenes/FoodCourt-logo.jpeg" alt="Food Court" width="500" height="333">
+            <p class="copyright"></p>
+            <div class="vertical-center"> </div>
             <div class="footer-basic">
                 <div class="social">
                     <a href="#"><i class="icon ion-social-instagram"><img class="instagram" img src="../media/imagenes/icon ion-social-instagram.png" alt="Instagram" width="100" height="100"></i></a>
@@ -58,16 +60,18 @@
                 </div>
                 <ul class="list-inline">
                     <li class="list-inline-item"><a href="/index.html">Home</a></li>
-                    <li class="list-inline-item"><a href="/html/restaurantes-provincias.html">Restaurantes</a></li>
-                    <li class="list-inline-item"><a href="/html/acerca-de.html">Acerca de</a></li>
-                    <li class="list-inline-item"><a href="/html/soporte.html">Soporte</a></li>
+                    <li class="list-inline-item"><a href="#">Restaurantes</a></li>
+                    <li class="list-inline-item"><a href="#">Acerca de</a></li>
+                    <li class="list-inline-item"><a href="#">Soporte</a></li>
                 </ul>
-                <div class="footer-line"></div>
+                <div class="footer-line">
+                    <div class="vertical-center"></div>
+                </div>
                 <p class="copyright">SoftMountain Technology © 2021</p>
             </div>
         </section>
     </footer>
-    <script type="text/javascript" src="js/.js"></script>
+    <script type="text/javascript" src="../js/main.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
