Correcciones de links rotos, parcial.

--- a/html/Inicio_Sesion.html
+++ b/html/Inicio_Sesion.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet" />
-    <link href="C:\Users\jazmi\OneDrive\Escritorio\Proyecto_SoftMountain\CSS\Inicio_Sesion.css" rel="stylesheet" />
-    <link rel="background" type="image/jpg." href="C:\Users\jazmi\OneDrive\Escritorio\Proyecto_SoftMountain\IMAGES\fondo.jpg">
+    <link rel="background" type="image/jpg." href="/media/imagenes/fondo.jpg">
+    <!--FALTA HOJA DE ESTILO EN EL SERVER-->
+    <link href="/csss/Inicio_Sesion.css" rel="stylesheet" />
     <title>Iniciar Sesion</title>
 
 </head>
@@ -20,7 +21,7 @@
     <div class="v202_1602">
         <div class="v202_1836"></div>
         <div class="v208_1506"></div>
-        <img class="background" src="C:\Users\jazmi\OneDrive\Escritorio\Proyecto_SoftMountain\IMAGES\fondo.jpg">
+        <img class="background" src="/media/imagenes/fondo.jpg">
         <h1 class="titulo1">¡Bienvenid@ a FoodCourt!</h1>
         <h3 class="subTitulo1">Inicia sesión con tus credenciales, y empieza a reservar en tus restaurantes favoritos.
         </h3>
@@ -29,7 +30,7 @@
         <div class="formularioBase">
 
             <div class="cajaInformacion"></div>
-            <img class="titulo2" src="C:\Users\jazmi\OneDrive\Escritorio\Proyecto_SoftMountain\IMAGES\logoCompleto.png">
+            <img class="titulo2" src="/media/imagenes/logoCompleto.png">
 
             <input type="text" id="txt-idUsuario" value="Usuario o Correo Electrónico" onclick="if(this.value=='Usuario o Correo Electrónico') this.value=''" onblur="if(this.value=='') this.value='Usuario o Correo Electrónico'" required>
             <input type="password" id="txt-idContrasenna" value="Contraseña" onclick="if(this.value=='Contraseña') this.value=''" onblur="if(this.value=='') this.value='Contraseña'" required>
@@ -62,19 +63,19 @@
 <footer>
     <section id="footer">
         <div class="footer-area"></div>
-        <img class="foto2" img src="C:\Users\jazmi\OneDrive\Escritorio\Proyecto_SoftMountain\IMAGES\logoCompleto.png" alt="Food Court" width="500" height="333">
+        <img class="foto2" img src="/media/imagenes/logoCompleto.png" alt="Food Court" width="500" height="333">
         <p class="copyright"></p>
         <div class="vertical-center"> </div>
 
         <div class="footer-basic">
             <footer>
                 <div class="social"><a href="#"><i class="icon ion-social-instagram"><img class="instagram" img
-                                src="C:\Users\jazmi\OneDrive\Escritorio\Proyecto_SoftMountain\IMAGES\icon ion-social-instagram.png" alt="Instagram" width="100" height="100"></i></a><a href="#"><i class="icon ion-social-twiter"><img class="Twiter" img
-                                src="C:\Users\jazmi\OneDrive\Escritorio\Proyecto_SoftMountain\IMAGES\icon ion-social-twiter.png" alt="Twiter" width="100" height="100"></i></a>
+                                src="/media/imagenes/icon ion-social-instagram.png" alt="Instagram" width="100" height="100"></i></a><a href="#"><i class="icon ion-social-twiter"><img class="Twiter" img
+                                src="/media/imagenes/icon ion-social-twiter.png" alt="Twiter" width="100" height="100"></i></a>
                     <a href="#"><i class="icon ion-social-tiktok"><img class="tiktok" img
-                                src="C:\Users\jazmi\OneDrive\Escritorio\Proyecto_SoftMountain\IMAGES\icon ion-social-tiktok.png" alt="Tiktok" width="100" height="100"></i></i></a>
+                                src="/media/imagenes/icon ion-social-tiktok.png" alt="Tiktok" width="100" height="100"></i></i></a>
                     <a href="#"><i class="icon ion-social-facebook"><img class="facebook" img
-                                src="C:\Users\jazmi\OneDrive\Escritorio\Proyecto_SoftMountain\IMAGES\icon ion-social-facebook.png" alt="Facebook" width="100" height="100"></i></a>
+                                src="/media/imagenes/icon ion-social-facebook.png" alt="Facebook" width="100" height="100"></i></a>
                 </div>
                 <ul class="list-inline">
                     <li class="list-inline-item"><a href="#">Home</a></li>
@@ -94,8 +95,8 @@
 </main>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="/JS/Inicio_Sesion.js"></script>
-<script src="C:\Users\jazmi\OneDrive\Escritorio\Proyecto_SoftMountain\JS\Inicio_Sesion.js"></script>
+<script src="/js/Inicio_Sesion.js"></script>
+<script src="/js/Inicio_Sesion.js"></script>
 
 </body>
 
