--- a/html/restaurantes_sanjose.html
+++ b/html/restaurantes_sanjose.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css\restaurantes_sanjose.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/restaurantes_sanjose.css">
 
 </head>
 
@@ -69,6 +69,6 @@
     </footer>
 
 </body>
-<script src="js\restaurantes_sanjose.js"></script>
+<script src="/js\restaurantes_sanjose.js"></script>
 
 </html>
