--- a/html/registro-comprador.html
+++ b/html/registro-comprador.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/registro-comprador.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/registro-comprador.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
     <link rel="stylesheet" href="/css/header-footer.css">
 
@@ -100,8 +100,8 @@
             </div>
         </section>
     </footer>
-    <!--<script src="js/usuarios-servicio.js" type="text/javascript" ></script>-->
-    <script src="js/registro-comprador.js" type="text/javascript"></script>
+    <!--<script src="/js/usuarios-servicio.js" type="text/javascript" ></script>-->
+    <script src="/js/registro-comprador.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
     <script src="http://code.jquery.ui.datepicker-es.js"></script>
