--- a/html/registro-duenno-de-restaurante.html
+++ b/html/registro-duenno-de-restaurante.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css\registro-duenno-de-restaurante.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css\registro-duenno-de-restaurante.css">
 </head>
 
 <body>
@@ -150,9 +150,9 @@
             </div>
 
     </footer>
-    <!--<script src="js/usuarios-servicio.js" type="text/javascript" ></script>-->
+    <!--<script src="/js/usuarios-servicio.js" type="text/javascript" ></script>-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js\registro-duenno-de-restaurante.js" type="text/javascript"></script>
+    <script src="/js\registro-duenno-de-restaurante.js" type="text/javascript"></script>
 
 
 </body>
