--- a/html/registro_comprador.html
+++ b/html/registro_comprador.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css\registro_comprador.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/registro_comprador.css">
 
 
 </head>
@@ -110,7 +110,7 @@
     </footer>
     <!--<script src="js/usuarios-servicio.js" type="text/javascript" ></script>-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js\registro_comprador.js" type="text/javascript"></script>
+    <script src="/js/registro_comprador.js" type="text/javascript"></script>
 
 
 </body>
