--- a/html/registro_comprador_2.html
+++ b/html/registro_comprador_2.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css\registro_comprador_2.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/registro_comprador_2.css">
 
 
 </head>
@@ -120,7 +120,7 @@
     </footer>
     <!--<script src="js/usuarios-servicio.js" type="text/javascript" ></script>-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js\registro_comprador_2.js" type="text/javascript "></script>
+    <script src="/js/registro_comprador_2.js" type="text/javascript "></script>
 
 </body>
 
