--- a/html/registro_menu.html
+++ b/html/registro_menu.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css\registro_menu.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css\registro_menu.css">
 
 </head>
 
@@ -128,7 +128,7 @@
 
             </div>
             <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-            <script src="js\registro_menu.js"></script>
+            <script src="/js\registro_menu.js"></script>
     </footer>
 
 </body>
