HTML y CSS de metodos-de-pago.html finalizados

--- a/html/index-usuario.html
+++ b/html/index-usuario.html
@@ -18,18 +18,18 @@
     <div class="nav">
         <ul>
             <li><a href="#">Inicio</a></li>
-            <li> <a href="listado-platillos-menu.html">Restaurantes</a></li>
-            <li><a href="#">Soporte</a></li>
+            <li> <a href="/html/restaurantes-provincia.html">Restaurantes</a></li>
+            <li><a href="/html/soporte.html">Soporte</a></li>
         </ul>
         <ul class="nav-izquierdo">
-            <li><a href="Inicio_Sesion.html">Inicio de Sesion</a></li>
-            <li class="registro-a"> <a href="#">Registro</a></li>
+            <li><a href="/html/Inicio_Sesion.html">Inicio de Sesion</a></li>
+            <li class="registro-a"> <a href="/html/registro_comprador.html">Registro</a></li>
             <li id="miusuario" class="registro-a">mi usuario</li>
         </ul>
     </div>
     <div class="acercade">
         <video class="video" autoplay onloadedmetadata="this.muted = true" playsinline autoplay muted loop>
-                        <source src="../Media/Videos/home.mp4" type="video/mp4">
+                        <source src="/media/videos/home.mp4" type="video/mp4">
                       Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                       </video>
         <p> Bienvenido (a) al <br>FoodCourt (online)!</p>
@@ -61,15 +61,15 @@
     <div class="fila-oferta">
         <h1 class="H1-Ofertas">No olvides nuestras ofertas!</h1>
         <div class="columna-oferta">
-            <img src="../Media/Imagenes/ofertas-1.jpg">
+            <img src="/media/imagenes/ofertas-1.jpg">
         </div>
         <div class="columna-oferta">
 
-            <img src="../Media/Imagenes/ofertas-2.jpg">
+            <img src="/media/imagenes/ofertas-2.jpg">
         </div>
         <div class="columna-oferta">
 
-            <img src="../Media/Imagenes/ofertas-3.jpg">
+            <img src="/media/imagenes/ofertas-3.jpg">
         </div>
     </div>
     <div class="fila-restaurante">
@@ -77,7 +77,7 @@
         <div class="columna-restaurante">
 
             <p>Eres un restaurante?</p>
-            <a href="registro-duenno-de-restaurante.html" title="">
+            <a href="/html/registro-duenno.html" title="Registro de restaurante">
                 <span><i class="fa fa-sign-in" aria-hidden="true"></i></span>
             </a>
         </div>
@@ -86,18 +86,18 @@
         <h1>RECOMENDACIONES</h1>
         <div class="columna-recomendaciones">
             <h2 class="usuario">Usuari@</h2>
-            <img src="../Media/Imagenes/vote5.png">
+            <img src="/media/imagenes/vote5.png">
             <p>Excelentes precios & calidad.<br>
         </div>
         <div class="columna-recomendaciones">
             <h2 class="usuario">Usuari@</h2>
-            <img src="../Media/Imagenes/vote5.png">
+            <img src="/media/imagenes/vote5.png">
             <p>Recomiendo el platillo x. </p>
 
         </div>
         <div class="columna-recomendaciones">
             <h2 class="usuario">Usuari@</h2>
-            <img src="../Media/Imagenes/vote5.png">
+            <img src="/media/imagenes/vote5.png">
             <p>Encantado con el platillo x.<br></p>
 
         </div>
