--- a/html/home.html
+++ b/html/home.html
@@ -55,7 +55,7 @@
     </div>
     <div class="acercade">
         <video class="video" autoplay onloadedmetadata="this.muted = true" playsinline autoplay muted loop>
-                            <source src="../Media/Imagenes/mountain.mp4" type="video/mp4">
+                            <source src="/media/imagenes/mountain.mp4" type="video/mp4">
                           Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                           </video>
 
