--- a/html/restaurantes_sanjose.html
+++ b/html/restaurantes_sanjose.html
@@ -69,6 +69,6 @@
     </footer>
 
 </body>
-<script src="/js\restaurantes_sanjose.js"></script>
+<script src="/js/restaurantes_sanjose.js"></script>
 
 </html>
